fix spacing issue on theme-switcher

--- a/sass/components/_theme-switcher.scss
+++ b/sass/components/_theme-switcher.scss
@@ -6,16 +6,16 @@
   grid-area: theme-switcher;
   justify-self: flex-end;
   z-index: 200;
-  padding: 2rem 3rem 2rem 2rem;
+  padding: 2rem 2rem 2rem 2rem;
 
   height: fit-content;
   display: flex;
   flex-direction: row-reverse;
-  justify-content: flex-end;
   width: min(100% - 1rem, 350px);
   cursor: pointer;
 
   @media (max-width: 450px) {
+    justify-content: flex-end;
     padding: 1rem 2rem 1rem 2.5rem;
   }
 
